<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item android:id="@+id/SetDate"
        android:title="@string/SetDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <item android:id="@+id/SetTime"
        android:title="@string/SetTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <item android:id="@+id/Settings"
        android:title="@string/Settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <item android:id="@+id/filter"
        android:title="@string/filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orderInCategory="1"
        android:showAsAction="always" />

</menu>