<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item android:id="@+id/menuItemCreateEventDayActivity"
        android:title="@string/CreateEvent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <item android:id="@+id/menuItemEditEventDayActivity"
        android:title="@string/EditEvent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/ic_border_color_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/menuItemSettingsDayActivity"
        android:title="@string/Settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</menu>